// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extensions [development] bud.extensions.repository matches snapshot 1`] = `
Object {
  "clean-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "clean-webpack-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "copy-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "copy-webpack-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "mini-css-extract-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "mini-css-extract-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-define-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-define-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-hot-module-replacement-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-hot-module-replacement-plugin",
      "options": undefined,
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-manifest-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-manifest-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-provide-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-provide-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 1`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 2`] = `
Container {
  "ident": "container",
  "repository": Object {
    "cleanOnceBeforeBuildPatterns": Array [
      "**/*",
      "!dll",
    ],
    "cleanStaleWebpackAssets": true,
    "protectWebpackAssets": true,
  },
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 3`] = `
Container {
  "ident": "container",
  "repository": Object {
    "patterns": Array [],
  },
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 4`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 5`] = `
Container {
  "ident": "container",
  "repository": Object {},
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 6`] = `
Container {
  "ident": "container",
  "repository": Object {
    "fileName": "manifest.json",
    "writeToFileEmit": true,
  },
}
`;

exports[`Extensions [development] bud.extensions.repository options matches snapshot 7`] = `
Container {
  "ident": "container",
  "repository": Object {
    "chunkFilename": "[name].css",
    "filename": "[name].css",
  },
}
`;
